
  [ Petter Reinholdtsen ]
  * Make sure popanal do not crash when an invalid timestamp is found
    in the POPULARITY-CONTEST-0 header.
  * Remove code in cron.weekly to sleep a random period of time up to
    an hour, to test hypothesis that this was not the reason for the
    increase in submissions seen the last few months.  Possibly
    reopens #440493, #459910.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 13 Jan 2008 14:32:32 +0100

popularity-contest (1.43) unstable; urgency=low

  [ Christian Perrier ]
  * Translations:
    - Kannada added. Closes: #422031
    - Hebrew updated. Closes: #445532

  [ Bill Allombert ]
  * Remove popcon-upload-ubuntu and popcon-submit-ubuntu.cgi, dropped
    by Ubuntu.
  * popularity-contest used files regexp:
    - add support for php scripts
    - Add missing $ after .pm. Closes: #431535, Thanks Gerfried Fuchs.
  * cron.weekly, function run_popcon():
    - remove spurious 'sh -c'
    - add -s /bin/sh in case nobody has no shell. Closes: #429405, #431867.
  * cron.weekly, default.conf, FAQ:
    - Add support for HTTP_PROXY. Closes: #365681.
  * Apply patch from Johan Walles to treat all mapped files as recently used
    (which they obviously are).  Closes: #457441, #327693.

  [ Petter Reinholdtsen ]
  * Add code in cron.weekly to sleep a random period of time up to an
    hour, to make sure all clients do not connect at the same time.
    Closes: #440493, #459910.
  * Updated standards-version from 3.7.2 to 3.7.3.  No change needed.
  * Include files in subdirectories under */lib/, to avoid files
    updated by ldconfig while still counting such packages as used
    (Closes: #457432)
  * Move homepage URL to the new Homepage control file tag.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 13 Jan 2008 14:32:32 +0100

popularity-contest (1.42) unstable; urgency=low

  [ Christian Perrier ]
  * Translations:
    - Catalan minor update. Closes: #416945
    - Marathi added. Closes: #416793

  [ Bill Allombert ]